--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.brihaspathee.aphrodite</groupId>
     <artifactId>aphrodite-library</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>aphrodite-library</name>
     <description>Common Classes for all Aphrodite Microservices</description>
@@ -27,7 +27,7 @@
         <!--        <developerConnection>scm:git:ssh://github.com:Aphrodite-2-0/aphrodite-library.git</developerConnection>-->
         <developerConnection>scm:git:git@github.com:Aphrodite-2-0/aphrodite-library.git</developerConnection>
         <url>scm:git:http://github.com/Aphrodite-2-0/aphrodite-library</url>
-        <tag>aphrodite-library-1.0.1</tag>
+        <tag>aphrodite-library-1.0.0</tag>
     </scm>
 
     <developers>
